# algebra

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dune-project  env.json  linear_e_test.json  poly_test_input.json  requirements.md
cli/: Cargo.toml
cli/BNF/: ident.pest  integral.pest  linear.pest  linear_de.pest  matrix_quaternion.pest  poly.pest  quaternion.pest  vector_quaternion.pest
cli/settings/: matrix_poly_frac.json  quaternion.json
cli/src/: engine.rs  main.rs  parser.rs  session.rs
cli/src/parser/: integral.rs  linear_de.rs  linear_e.rs  none.rs  poly.rs  quaternion.rs
docs/: 1.md  2.md  architecture.drawio  cd.md
engine/: dune_description.txt  env.json
engine/.devcontainer/: Dockerfile  devcontainer.json
engine/example/: add.json  defineA.json  defineB.json
engine/example/calc/: polynomial.json  quaternion.json
engine/example/integral/: 1.json  2.json  3.json  4.json
engine/example/linearDE/: 1.json  2.json  3.json
engine/example/linearE/: 1.json  2.json  3.json  4.json  5.json
engine/settings/: linear_de.json  rat_func.json  rational.json
engine/src/: calculator_runner.ml  calculator_runner.mli  dune  main.ml  path_resolver.ml
engine/src/types/: dune
engine/src/types/numeric/: complex.ml  complex.mli  cube_rootp_poly_fraction.ml  integer.ml  integer.mli  linear_de_solver.ml  natural.ml  natural.mli  octonion.ml  q_cube_rootp.ml  q_octonion.ml  q_root2.ml  q_root2.mli  q_root23.ml  q_rootp.ml  quaternion.ml  quaternion.mli  rat_poly_exp.ml  rat_poly_fraction.ml  rat_polynomial.ml  rational.ml  rational.mli  rootp_frac_exp.ml  rootp_poly_fraction.ml  rootp_poly_log.ml  sedenion.ml
engine/src/types/utils/: cardano_solver.ml  cayley_dickson_printer.ml
engine/test/matrix/: test_matrix_com.ml
engine/test/numeric/: dune  test_complex.ml  test_cube_rootp_poly_fraction.ml  test_exponential.ml  test_expression_rootp.ml  test_linear_de.ml  test_logarithm.ml  test_q_octonion.ml  test_q_root23.ml  test_rat_poly_exp.ml  test_rat_poly_fraction.ml  test_rat_polynomial.ml  test_rootp_frac_exp.ml  test_rootp_poly_fraction.ml  test_rootp_poly_log.ml
engine/test/poly/: dune  test_cardano_solver.ml
engine/test/support/: latex_reporter.ml
example/: script.json
settings/: integral.json  linear_e.json  matrix_poly_rat.json  matrix_rat.json  poly_matrix_eval.json  poly_rat.json  poly_test_settings.json  vector_oct.json
src/types/: dune
src/types/numeric/: integer.mli  q_cube_rootp.ml  q_root2.mli  q_root23.ml  q_rootp.ml  quaternion.ml  quaternion.mli  rational.ml  rational.mli  sedenion.ml
src/types/utils/: latex.ml
test/: dune
test/matrix/: dune
test/numeric/: dune  test_complex.ml  test_integer.ml  test_natural.ml  test_q_cube_rootp.ml  test_q_root2.ml  test_q_rootp.ml  test_rational.ml
test/poly/: test_cardano_solver.ml
test/support/: dune  latex_reporter.ml
(+35 files in other folders)
